--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/customer?useSSL=false
+spring.datasource.url=jdbc:mysql://database-1.cqfdaxu5gxgp.us-east-1.rds.amazonaws.com:3306/customer?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=password
 logging.level.root=WARN
